# alpha-scrapers

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
alpha_scrapers/: alpha_scraper.py  cisco_scraper.py  db.py  exporters.py  qrt_scraper.py
alpha_scrapers/utils/: extraction.py  io.py
tests/: conftest.py  test_cisco_scraper.py  test_db.py  test_exporters.py  test_io.py  test_qrt_scraper.py  utils.py
tests/utils/: test_extraction.py
