[project]
name = "alpha-scrapers"
version = "0.1.0"
description = ""
authors = [
    {name = "LucasSD",email = "lucas.stonedrake@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "jmespath (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
